# deepdive-tracking

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  DATABASE_QUERY_GUIDE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPTS_REFERENCE.md  Dockerfile  Dockerfile.e2e  Dockerfile.verify  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE1_COMPLETION.md  PHASE2-COMPLETION-REPORT.md  README.md  WECHAT_API_LIMITATION.md  ai_news_digest.html  alembic.ini  analysis_report_scoring_bias.md  cloudbuild.yaml  deployment-checklist.md  docker-compose.yml  english-summary-fix.md  fix_english_summaries.py  install-docker.ps1  p2-crawler-collector-verification.md  pyproject.toml  requirements-implementation-summary.md  run-collection.ps1  setup.py  test_workflow_simple.py  verify_deployment.sh
.claude/: AGENT-HANDOFF-PROTOCOL.md  standards-architecture.md
.claude/handoff/: 2025-11-04-session-2-handoff.md  HANDOFF-COMPLETE.txt  NEXT-AGENT-INSTRUCTIONS.md  PHASE-2-COMPLETION-REPORT.md  README.md  agent-2-startup-simulation.md  agent-3-startup-guide.md  agent-4-completion-summary.md  agent-5-final-status.md  agent-6-handoff.md  agent-7-completion-report.md  agent-7-status.md  agent-handoff-protocol.md  deliverable-summary.md  directory-cleanup-summary.md  handoff-complete.md  next-steps.md  phase-2-plan.md  phase-3-handoff-report.md  phase-4-progress-report.md  ready-for-execution.md  root-cause-analysis.md  rules-compliance-report.md  system-ready.md
.claude/hooks/: commit-msg  pre-commit  prepare-commit-msg
.claude/standards/: 00-overview.md  01-project-setup.md  02-directory-structure.md  03-naming-conventions.md  04-python-code-style.md  05-api-design.md  06-database-design.md  07-testing-standards.md  08-git-workflow.md  09-documentation.md  10-security.md  11-deployment.md  99-quick-reference.md
.claude/tools/: check-standards.sh  install-hooks.sh  pre-submission-check.sh
alembic/: env.py
alembic/versions/: 001_init_create_tables.py  001_initial_create_all_tables.py  002_add_english_summary_fields.py  003_add_content_simhash.py
data/exports/: database_export.txt  news_summary.txt
docs/: IMPLEMENTATION-STATUS.md  REAL_WORKFLOW_STATUS.md  docs.md  gcp-automation-deployment.md  real-workflow-status.md  session-2-completion-report.md  testing-session-2-summary.md
docs/deployment/: CLOUD_RUN_DEPLOYMENT.md  GCP-DEPLOYMENT-PROGRESS.md  GCP-DEPLOYMENT.md  automation-setup-complete.md  cloud-architecture.md  cloud-run-deployment.md  (+4 more)
infra/: cloud-scheduler.yaml  docker-entrypoint.sh
scripts/: README.md  configure_default_authors.py  db_init.py  e2e_verification.py  init_publish_priorities.py  rescore_unscored_simple.py  reset_db_user_password.py  run_collection.py  run_complete_e2e_test.py  run_gcp_migrations.py  run_priority_publishing_test.py  scripts-structure.md  show_data_sources.py  show_publish_priorities.py  test-batch-scoring.py  test-real-api.py  test_crawler_collector.py  test_full_article_fetch.py  test_html_cleaner.py  test_publishing_service.py  test_review_service.py  verify_data_quality.py  view_database_summary.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py
(+220 files in other folders)
